adding routes, and styling content

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,21 @@
-<!DOCTYPE html>
-html(lang="en")
-   head
-      meta(charset="UTF-8")
-      meta(name="viewport", content="width=device-width, initial-scale=1.0")
-      title Document
-   body
-      h1 testing
+extends layout.pug
+block content
+   img(src='/img/woman.jpg' alt='woman')
+   .text
+      h1 #{title}
+      p.
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+         Sed accumsan justo quis rhoncus aliquam. Aliquam eget auctor lectus.
+         Duis laoreet interdum orci faucibus suscipit. Cras aliquet sapien at felis
+         congue, in pharetra lorem porta. Proin et pharetra nibh. Donec dolor tortor,
+         interdum non lacinia nec, vulputate dapibus risus. Nam mollis elementum ipsum.
+         Sed vestibulum faucibus nibh ac lobortis. Nunc ut ornare eros.
+         Aliquam erat volutpat. Praesent congue turpis nec lectus pellentesque laoreet.
+         Aenean lacinia convallis purus, sed vestibulum odio varius ut.
+      p.
+         Quisque sit amet lectus sit amet urna accumsan suscipit eget non sapien.
+         Phasellus tempor risus in dictum eleifend. Praesent ornare posuere arcu
+         vitae egestas. Aenean vel nunc scelerisque, dignissim ipsum sed, lacinia
+         risus. Ut pellentesque blandit diam, id condimentum dolor eleifend feugiat.
+         Integer eget cursus lorem. Integer condimentum orci at elit accumsan, vel
+         mollis purus maximus. Phasellus malesuada enim orci, in feugiat purus blandit in.
